# SoftwareRenderer

./: .gitmodules  CMakeLists.txt  README.md
Headers/: HelpMath.h  PNGFile.h  PPMFile.h  PrimitiveTypes.h  Texture2D.h  Vector4.h  Vector_ExpressionTemplates.h  Vector_Expression_Mod.h  sse_config.h
LibPNG/lib/vc2008/: libpng-s.lib  libpngd-s.lib  zlib-s.lib  zlibd-s.lib
LibPNG/lib/vc2010/: libpng-s.lib  libpngd-s.lib  zlib-s.lib  zlibd-s.lib
Resources/: Thumbs.db
Source/: BMPFile.cpp  Main.cpp  TGAFile.cpp  Texture2D.cpp
src/: BMPFile.h  CMakeLists.txt  Config.h  ImageFile.cpp  ImageFile.h  Main.cpp  Matrix4x4.h  Matrix4x4SIMD.inl  Matrix_ExpressionTemplates.h  PNGFile.cpp  PPMFile.cpp  Renderer.h  TGAFile.h  Texture2D.h  Vector4SIMD.inl  sse_type.h
vc2008/: MathModule.sln  MathModule.vcproj  Thumbs.db
vc2010/: MathModule.sln  MathModule.vcxproj  MathModule.vcxproj.filters  Thumbs.db
